--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="flex">
                     <a class="btn-tr f-bold" id="none">Daftar</a> 
                     <a class="btn-tr d-none" id="btn-toggle">
-                        <i class="fa fa-bars rotate"></i>
+                        <i class="fa fa-bars rotate" id="rotate"></i>
                     </a>
                 </li>
             </ul> 
@@ -62,7 +62,7 @@
     </div>
 
     <section class="container-md">
-        asd
+        
     </section>
 
     <script src="js/script.js"></script>
