--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="flex">
                     <a class="btn-tr f-bold" id="none">Daftar</a> 
                     <a class="btn-tr d-none" id="btn-toggle">
-                        <i class="fa fa-bars rotate" id="rotate"></i>
+                        <i class="fa fa-bars rotate bars" id="rotate"></i>
                     </a>
                 </li>
             </ul> 
