--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="navbar">
         <nav class="container-md flex" >
             <ul>
-                <li><a class="font-title fs-4 italic" href="#home">Rangkep.io</a></li>
+                <li><a class="font-title fs-4 italic" href="#home">Rankep.io</a></li>
             </ul>
             <ul class="flex container-sm">
                 <li><a href="#product">Products <i class="fa fa-angle-down fa-2xs" aria-hidden="true"></i></a></li>
@@ -34,7 +34,7 @@
         </nav>
         <div class="nav-toggle container-md d-none absolute" id="nav-toggle">
             <ul class="block fs-2">
-                <a href="" class="" id="btn-toggle"><li>Products<i class="fa fa-angle-down fa-2xs rotate" aria-hidden="true"></i></li></a>
+                <a href="" id="btn-toggle"><li>Products<i class="fa fa-angle-down fa-2xs rotate" aria-hidden="true"></i></li></a>
                 <a href=""><li>Solution<i class="fa fa-angle-down fa-2xs" aria-hidden="true"></i></li></a>
                 <a href=""><li>Company<i class="fa fa-angle-down fa-2xs" aria-hidden="true"></i></li></a>
                 
@@ -55,14 +55,36 @@
                 <img src="assets/img/wedding-dashboard.png" alt="Wedding Day" width="90%">
             </div>
         </div>
-
-        <div class="content">
-
-        </div>
     </div>
 
     <section class="container-md">
-        
+        <div class="img-list">
+            <div class="img">
+                <img src="https://www.telkom.co.id/images/logo_horizontal.svg" alt="">
+            </div>
+            <div class="img">
+                <img src="https://www.pertamina.com/landing/images/logo.png" alt="">
+            </div>
+            <div class="img">
+                <img src="https://www.garuda-indonesia.com/content/dam/garuda/logo/logoGA-2x.png" alt="">
+            </div>
+            <div class="img">
+                <img src="https://www.posindonesia.co.id/img/logo-pos.svg" alt="">
+            </div>
+            <div class="img">
+                <img src="https://www.telkom.co.id/images/logo_horizontal.svg" alt="">
+            </div>
+            <div class="img">
+                <img src="https://www.pertamina.com/landing/images/logo.png" alt="">
+            </div>
+            <div class="img">
+                <img src="https://www.garuda-indonesia.com/content/dam/garuda/logo/logoGA-2x.png" alt="">
+            </div>
+            <div class="img">
+                <img src="https://www.posindonesia.co.id/img/logo-pos.svg" alt="">
+            </div>
+
+        </div>
     </section>
 
     <script src="js/script.js"></script>
